# python-template

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  lint.yml  pylint.yml  pytest.yml
docs/: api.md  conf.py  index.md  index.rst
requirements/: requirements-docs.txt  requirements-lint.txt
src/python_template/: __about__.py  __init__.py  cli.py  example.py  notebook.ipynb
tests/: __init__.py  conftest.py  test_example.py
